@@ -1377,6 +1377,8 @@
    <date>2012-05-29</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [mms] Return to same page when deleting contact from browse view.
+* [mjr] Add ability to return count of objects matching search in place of full result set.
 * [jan] Update Turkish translation (İstanbul Technical University).
 * [jan] Fix strict searching in favourites driver (Bug #11207).
    </notes>
